kubernetes/apps/zitadel/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route
spec:
  hostnames:
  - "zitadel.${DOMAIN1}"
  parentRefs:
    - name: internal
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui/v2/login
      backendRefs:
        - name: zitadel-login
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zitadel
          port: 8080
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: zitadel-login-route
# spec:
#   hostnames:
#   - "zitadel-login.${DOMAIN1}"
#   parentRefs:
#     - name: internal
#       namespace: kube-system
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: zitadel-login
#           port: 3000
